--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,37 @@
 *.csv
 *.jsonl
 *.bin
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+frontend/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.env
+*.json
+yarn.lock
+*.sh
+
+
+*.pyc
+*.sh
+
+
