[Fix] 원티드 API 수정

--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,8 +1,9 @@
 #Dockerfile
 FROM node:19.6.1-alpine3.17 as builder
 
-ARG REACT_APP_DPR_ENDPOINT
-ARG REACT_APP_SUMMARY_ENDPOINT
+ARG REACT_APP_WANTED_ENDPOINT
+ARG REACT_APP_WANTED_ID
+ARG REACT_APP_WANTED_SECRET
 
 WORKDIR /app
 COPY . /app
