--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -5,7 +5,7 @@ upstream docker_fastapi {
 server {
     listen 80;
 
-    location ~ /api/ {
+    location /api/ {
         proxy_pass http://docker_fastapi;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
@@ -17,17 +17,17 @@ server {
         send_timeout 180;
     }
 
-    # location ~ /v1/ {
-    #     proxy_pass https://openapi.wanted.jobs;
-    #     proxy_set_header   Host $host;
-    #     proxy_set_header   X-Real-IP $remote_addr;
-    #     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header   X-Forwarded-Host $server_name;
-    #     proxy_connect_timeout 180;
-    #     proxy_send_timeout 180;
-    #     proxy_read_timeout 180;
-    #     send_timeout 180;
-    # }
+    location /v1/ {
+        proxy_pass https://openapi.wanted.jobs;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
+        proxy_connect_timeout 180;
+        proxy_send_timeout 180;
+        proxy_read_timeout 180;
+        send_timeout 180;
+    }
 
     location / {
         root   /usr/share/nginx/html;
