[Fix] 도커 파일 수정

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -7,6 +7,9 @@ ARG MYSQL_DB
 ARG MYSQL_CHARSET
 ARG OPENAI_API_KEY
 ARG OPENAI_API_ORG
+ARG WANTED_ENDPOINT
+ARG WANTED_ID
+ARG WANTED_SECRET
 
 ENV MYSQL_HOST ${MYSQL_HOST}
 ENV MYSQL_USER ${MYSQL_USER}
@@ -15,6 +18,9 @@ ENV MYSQL_DB ${MYSQL_DB}
 ENV MYSQL_CHARSET ${MYSQL_CHARSET}
 ENV OPENAI_API_KEY ${OPENAI_API_KEY}
 ENV OPENAI_API_ORG ${OPENAI_API_ORG}
+ENV WANTED_ENDPOINT ${WANTED_ENDPOINT}
+ENV WANTED_ID ${WANTED_ID}
+ENV WANTED_SECRET ${WANTED_SECRET}
 
 COPY . /app
 WORKDIR /app
