--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -12,6 +12,9 @@ services:
                 - OPENAI_API_KEY=${OPENAI_API_KEY}
                 - MYSQL_CHARSET=${MYSQL_CHARSET}
                 - OPENAI_API_ORG=${OPENAI_API_ORG}
+                - WANTED_ENDPOINT=${WANTED_ENDPOINT}
+                - WANTED_ID=${WANTED_ID}
+                - WANTED_SECRET=${WANTED_SECRET}
             dockerfile: Dockerfile
         restart: always
         networks:
@@ -23,10 +26,6 @@ services:
         container_name: frontend
         build:
             context: ./frontend/
-            args:
-                - REACT_APP_WANTED_ENDPOINT=${REACT_APP_WANTED_ENDPOINT}
-                - REACT_APP_WANTED_ID=${REACT_APP_WANTED_ID}
-                - REACT_APP_WANTED_SECRET=${REACT_APP_WANTED_SECRET}
             dockerfile: Dockerfile
         ports:
             - "80:80"
