--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,13 @@
 		"@types/styled-components": "^5.1.26",
 		"axios": "^1.4.0",
 		"craco": "^0.0.3",
+		"history": "^5.3.0",
 		"http-proxy-middleware": "^2.0.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.14.2",
 		"react-scripts": "5.0.1",
+		"react-sweetalert2": "^0.6.0",
 		"recoil": "^0.7.7",
 		"styled-components": "^6.0.5",
 		"tsconfig-paths-webpack-plugin": "^4.1.0",
