--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
 		"http-proxy-middleware": "^2.0.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-reveal": "^1.2.2",
 		"react-router-dom": "^6.14.2",
 		"react-scripts": "5.0.1",
 		"react-sweetalert2": "^0.6.0",
