--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"http-proxy-middleware": "^2.0.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-reveal": "^1.2.2",
 		"react-router-dom": "^6.14.2",
 		"react-scripts": "5.0.1",
 		"recoil": "^0.7.7",
