--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -3,7 +3,23 @@ upstream docker_fastapi {
 }
 
 server {
-    listen 80;
+    # listen 80;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+
+     # SSL 공개키, 개인키 경로 명시
+    ssl_certificate /etc/ssl/cert.pem;
+    ssl_certificate_key /etc/ssl/key.pem;
+
+    # SSL 보안 설정
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_timeout 1d;
+    ssl_session_tickets off;
+
+    # SSL 암호화 프로토콜 설정
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+    ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
 
     location /api/ {
         proxy_pass http://docker_fastapi;
